--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,5 +1,23 @@
+" IdeaVIM plugins
 set surround
 set commentary
 set multiple-cursors
-set ideajoin
+set exchange
+
+" IdeaVIM personal settings
+let mapleader = " "
+nnoremap <leader>k :action MethodUp<cr>
+nnoremap <leader>j :action MethodDown<cr>
+set ignorecase
 set clipboard+=unnamed
+set smartcase
+set scrolloff=3         " 3 lines above/below cursor when scrolling
+set ideajoin
+nmap <a-j> 15gj
+nmap <a-k> 15gk
+" These create newlines like o and O but stay in normal mode
+nmap zj o<Esc>k
+nmap zk O<Esc>j
+" built-in navigation to navigated items works better
+nnoremap <c-o> :action Back<cr>
+nnoremap <c-i> :action Forward<cr>
