--- a/.ideavimrc
+++ b/.ideavimrc
@@ -5,6 +5,7 @@ set multiple-cursors
 set vim-paragraph-motion
 set textobj-indent
 set exchange
+
 " IdeaVIM personal settings
 let mapleader = " "
 nnoremap <leader>k :action MethodUp<cr>
@@ -16,12 +17,10 @@ set scrolloff=3         " 3 lines above/below cursor when scrolling
 set ideajoin
 nmap <a-j> 10gjzz
 nmap <a-k> 10gkzz
+
 " These create newlines like o and O but stay in normal mode
 nmap zk o<Esc>k
 nmap zj O<Esc>j
-" built-in navigation to navigated items works better
-nnoremap <c-o> :action Back<cr>
-nnoremap <c-i> :action Forward<cr>
 
 " register leader
 let mapleader = " "
@@ -29,3 +28,16 @@ let mapleader = " "
 " code navigation
 :map <leader>k <Action>(MethodUp)
 :map <leader>j <Action>(MethodDown)
+:nmap <leader>rl <Action>(GotoRelated)
+
+" Errors
+nmap <leader>x :action GotoNextError<cr>
+nmap <leader>X :action GotoPreviousError<cr>
+nmap <leader>d :action ShowErrorDescription<cr>
+
+" VCS operations
+nmap <leader>yy :action Vcs.Show.Local.Changes<cr>
+nmap <leader>yp :action Vcs.QuickListPopupAction<cr>
+nmap <leader>ya :action Annotate<cr>
+nmap <leader>yl :action Vcs.Show.Log<cr>
+nmap <leader>yd :action Compare.LastVersion<cr>
