--- a/.ideavimrc
+++ b/.ideavimrc
@@ -30,6 +30,18 @@ let mapleader = " "
 :map <leader>j <Action>(MethodDown)
 :nmap <leader>rl <Action>(GotoRelated)
 
+" key bindings for quickly moving between windows
+" h left, l right, k up, j down
+nmap <leader>h <c-w>h
+nmap <leader>l <c-w>l
+nmap <leader>k <c-w>k
+nmap <leader>j <c-w>j
+
+" Splits manipulation
+nmap <leader>ws :action SplitHorizontally<cr>
+nmap <leader>wv :action SplitVertically<cr>
+nmap <leader>wd :action OpenEditorInOppositeTabGroup<cr>
+
 " Errors
 nmap <leader>x :action GotoNextError<cr>
 nmap <leader>X :action GotoPreviousError<cr>
