Update starship.rs configuration

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,16 +1,25 @@
+[package]
+disabled = true
+
 [nodejs]
 disabled = true
+
 [ruby]
 disabled = true
+
 [git_branch]
 symbol = ''
 format = "[$branch]($style) "
 style = 'dimmed yellow'
+
 [git_status]
 disabled = true
+
 [python]
 disabled = true
+
 [battery]
 disabled = true
+
 [docker_context]
 disabled = true
